--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -2,18 +2,18 @@
 
 .light-mode {
   --clr: #1A202C;
-  --bg: white;
+  --bg: #FAFAFA;
   --link: blue;
-  --element-bg: #FAFAFA;
+  --element-bg: white;
   background: var(--bg);
   color: var(--clr);
 }
 
 .dark-mode {
   --clr: #E2E8F0;
-  --bg: black;
+  --bg: #0D0D0D;
   --link: rgb(27, 149, 224);
-  --element-bg: #090B0F;
+  --element-bg: #000000;
   background: var(--bg);
   color: var(--clr);
 }
@@ -43,24 +43,24 @@
 }
 
 .big {
-  font-size: calc(2vw + 10px);
+  font-size: calc(1.7vw + 20px);
 }
 
 .bg {
-  background: var(--element-bg);
+  background: rgb(40, 42, 54);
+  color: white;
+  border-radius: 10px;
+  padding: 10px;
+  overflow-x: scroll;
 }
 
 body {
   font-size: 18px;
-  font-family: "Times New Roman", Times, serif;
   margin: auto;
   max-width: 800px;
-  line-height: 1.5;
-}
-
-h1, h2, h3, h4, h5, h6, .sans {
   font-family: BlinkMacSystemFont,-apple-system,Roboto,Helvetica Neue,Helvetica,
     Arial,sans-serif;
+  line-height: 1.5;
 }
 
 h1 {
@@ -71,12 +71,13 @@ h1 {
 
 h2 {
   margin-top: 70px;
-  margin-bottom: 0px;
+  margin-bottom: 15px;
+  font-size: 1.5rem;
 }
 
 p {
-  margin-top: 5px;
-  opacity: .9;
+  margin: 16px auto;
+  letter-spacing: .1px;
 }
 
 main {
@@ -101,6 +102,7 @@ code, pre {
 
 pre {
   padding: 10px;
+  border-radius: 10px;
 }
 
 blockquote {
@@ -120,6 +122,7 @@ blockquote {
   max-width: 800px;
   padding: 15px 20px;
   margin-top: 20px;
+  border-radius: 10px;
 }
 
 .Stack-h3 {
@@ -176,4 +179,27 @@ blockquote {
 .Footer {
   margin: 70px auto 20px auto;
   text-align: center;
+}
+
+/* Artices.js */
+.Articles-btn {
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  font-size: 25px;
+  color: var(--clr);
+  opacity: .8;
+  outline: none;
+  margin: 50px 0 0 0;
+}
+
+.Articles-btn-active {
+  cursor: pointer;
+  outline: none;
+  color: var(--clr);
+  background: transparent;
+  border: none;
+  font-size: 28px;
+  text-shadow: -2px 2px var(--bg);
+  margin: 50px 0 0 0;
 }
