--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -203,3 +203,15 @@ blockquote {
   text-shadow: -2px 2px var(--bg);
   margin: 50px 0 0 0;
 }
+
+/* Index.js */
+.Index-social {
+  display: flex;
+  justify-content: space-around;
+}
+
+@media only screen and (max-width: 600px) {
+  .Index-social {
+    display: block;
+  }
+}
