--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -273,4 +273,9 @@ ol > li:after {
   .Index-social, .Stack {
     display: block;
   }
+  .Stack-feat {
+    margin-left: 0;
+    margin-top: 5px;
+    margin-right: 5px;
+  }
 }
