--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -29,6 +29,7 @@
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   letter-spacing: -0.02rem;
+  font-size: 18px;
 }
 
 .condensed {
@@ -57,14 +58,23 @@
 }
 
 body {
-  font-size: 18px;
+  font-size: 20px;
   scroll-behavior: smooth;
   margin: auto;
   max-width: 800px;
   line-height: 1.5;
+  font-family: 'Times New Roman', Times, serif;
+  letter-spacing: -0.02rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  letter-spacing: -0.02rem;
 }
 
 h1 {
