--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -63,7 +63,8 @@ body {
   margin: auto;
   max-width: 800px;
   line-height: 1.5;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   letter-spacing: -0.02rem;
 }
 
