Removed styles. Created sidebar

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,5 +1,4 @@
-/* Global Styles */
-
+/* Light & Dark Themes */
 .light-mode {
   --clr: #1a202c;
   --bg: #ffffff;
@@ -25,272 +24,9 @@
   cursor: pointer;
 }
 
-.sans {
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  letter-spacing: -0.02rem;
-  font-size: 18px;
-}
-
-.condensed {
-  font-family: 'HelveticaNeue-CondensedBold', 'HelveticaNeueBoldCondensed',
-    'HelveticaNeue-Bold-Condensed', 'Helvetica Neue Bold Condensed',
-    'HelveticaNeueBold', 'HelveticaNeue-Bold', 'Helvetica Neue Bold',
-    'HelveticaNeue', 'Helvetica Neue', 'TeXGyreHerosCnBold', 'Helvetica',
-    'Tahoma', 'Geneva', 'Arial Narrow', 'Arial', sans-serif;
-}
-
-.spacer {
-  margin-top: 80px;
-}
-
-::selection {
-  background: blue;
-  color: white;
-}
-
-.bg {
-  background: rgb(40, 42, 54);
-  color: white;
-  border-radius: 10px;
-  padding: 10px;
-  overflow-x: scroll;
-}
-
+html,
 body {
-  font-size: 20px;
-  scroll-behavior: smooth;
-  margin: auto;
-  max-width: 800px;
-  line-height: 1.5;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  letter-spacing: -0.02rem;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-h1 {
-  margin: 0;
-  padding: 0;
-  font-size: 50px;
-}
-
-h2 {
-  margin-top: 5vh;
-  margin-bottom: 15px;
-  font-size: 35px;
-}
-
-.h2-margin {
-  margin-top: 10vh;
-}
-
-p {
-  margin: 16px auto;
-  letter-spacing: 0.1px;
-}
-
-main {
-  margin: auto 10px;
-}
-
-a {
-  text-decoration: none;
-  color: var(--link);
-}
-
-a:hover {
-  filter: brightness(1.2);
-}
-
-code,
-pre {
-  font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier,
-    monospace;
-  overflow-x: scroll;
-  font-size: 16px;
-}
-
-pre {
-  padding: 10px;
-}
-
-blockquote {
-  border-left: solid 3px var(--clr);
-  margin: 0;
-  padding: 15px 30px;
-  font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier,
-    monospace;
-  font-weight: bold;
-  background: var(--element-bg);
-}
-
-.special-ol {
-  list-style-type: none;
-  padding-left: 0;
-  margin-left: 0;
-}
-
-.special-ol > li {
-  position: relative;
-  margin: 0;
-  padding-bottom: 0.5em;
-  padding-left: 20px;
-}
-
-.special-ol > li:before {
-  content: '';
-  background-color: var(--clr);
-  position: absolute;
-  bottom: 0px;
-  top: 0px;
-  left: 5px;
-  width: 2px;
-}
-
-.special-ol > li:after {
-  content: '';
-  position: absolute;
-  background-color: var(--bg);
-  left: 1px;
-  top: 8px;
-  height: 6px;
-  width: 6px;
-  border-radius: 100%;
-  border: 2px solid var(--clr);
-}
-
-table {
-  border-spacing: 0;
-  text-align: left;
-  border: 1px solid var(--clr);
-}
-
-th,
-td {
-  padding: 5px 10px 5px 7px;
-}
-
-th {
-  background-color: var(--bg);
-  border-bottom: 1px solid var(--clr);
-}
-
-tr:nth-child(odd) {
-  background-color: var(--element-bg);
-}
-
-/* Component Styles */
-/* Stack.js */
-.Stack {
-  background: var(--element-bg);
-  max-width: 800px;
-  padding: 15px 20px;
-  margin-top: 20px;
-  border-radius: 10px;
-  display: flex;
-  justify-content: space-between;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-}
-
-.Stack-h3 {
+  font-size: 16px !important;
   padding: 0;
   margin: 0;
-}
-
-.Stack-p {
-  margin: 3px 0;
-  padding: 0;
-}
-
-.Stack-feat {
-  background: var(--clr);
-  padding: 5px 8px;
-  border-radius: 4px;
-  text-align: center;
-  color: var(--bg);
-  font-size: 14px;
-  margin-left: 5px;
-}
-
-/* Header.js */
-.Header-nav {
-  max-width: 800px;
-  margin: 20px auto 70px auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.Header-link {
-  cursor: pointer;
-  border-width: 2px;
-  border-style: solid;
-  border-color: var(--clr);
-  color: var(--clr);
-  background: var(--bg);
-  display: inline;
-  padding: 8px 16px;
-  font-size: calc(14px + 0.5vw);
-  box-shadow: 3px 3px 0px var(--clr);
-}
-
-.Header-link-a {
-  background: var(--clr);
-  color: var(--bg);
-  border-color: var(--clr);
-  padding: 8px 16px;
-  font-size: calc(14px + 0.5vw);
-  border-width: 2px;
-  box-shadow: 3px 3px 0px var(--clr);
-}
-
-/* Footer.js */
-.Footer {
-  margin: 10vh auto 20px auto;
-  text-align: center;
-}
-
-/* Artices.js */
-.Articles-btn {
-  cursor: pointer;
-  background: transparent;
-  border: none;
-  font-size: 25px;
-  color: var(--clr);
-  opacity: 0.8;
-  outline: none;
-  margin: 50px 0 0 0;
-}
-
-.Articles-btn-active {
-  cursor: pointer;
-  outline: none;
-  color: var(--clr);
-  background: transparent;
-  border: none;
-  font-size: 28px;
-  text-shadow: -2px 2px var(--bg);
-  margin: 50px 0 0 0;
-}
-
-@media only screen and (max-width: 600px) {
-  .Stack {
-    display: block;
-  }
-  .Stack-feat {
-    margin-left: 0;
-    margin-top: 5px;
-    margin-right: 5px;
-  }
 }
