--- a/global.css
+++ b/global.css
@@ -2,4 +2,33 @@ body {
   margin: 0;
   padding: 0;
   font-size: 14px;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-family: Arial;
+}
+
+p {
+  font-size: 16px;
+}
+
+.bgImg {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.window-space {
+  overflow-y: scroll;
 }
