--- a/components/styles/Layout.module.css
+++ b/components/styles/Layout.module.css
@@ -1,5 +1,17 @@
 .nav {
   display: flex;
   flex-direction: column;
+  text-align: center;
   max-width: 100px;
+}
+
+.txt {
+  background: teal;
+  color: white;
+  padding: 1px 2px;
+}
+
+.a {
+  text-decoration: none;
+  margin: 12px auto;
 }
