--- a/global.css
+++ b/global.css
@@ -13,12 +13,24 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+li {
   font-family: Arial;
 }
 
-p {
+p,
+li {
   font-size: 16px;
+}
+
+ul,
+ol {
+  padding-left: 20px;
+}
+
+button {
+  cursor: pointer;
+  margin: 3px;
 }
 
 .bgImg {
